Move properties to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 server.servlet.context-path=/user-management-service
 
+
+# ======REDIS==============
+redis.host=localhost
+redis.port=16379
+redis.password=some
+
