Add request filter for api containing Urls

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ server.servlet.context-path=/user-management-service
 
 # ======REDIS==============
 redis.host=localhost
-redis.port=16379
-redis.password=some
+redis.port=6379
+redis.password=root
 
