--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port= 8081
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
-server.servlet.context-path=/user-management-service
+server.servlet.context-path=/ums
 
 
 # ======REDIS==============
