--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -13,8 +13,7 @@ server.servlet.context-path=/ums
 
 
 # ======REDIS==============
-redis.database=0
-redis.host=8.tcp.ngrok.io
-redis.port=18241
-redis.nodes=sastech-redis-0001-001.sastech-redis.clieyv.aps1.cache.amazonaws.com:6379
+redis.host=localhost
+redis.port=6379
+redis.nodes=localhost:6379
 
