--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,12 @@ spring.jpa.database=oracle
 #spring.datasource.validationQuery=SELECT 1
 server.port= 8081
 
+#========LOGGING=====================
+logging.file.name=/home/sastechadmin/logs/ums/ums.log
+logging.level.com.sas.mutual.payment=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+
+
 server.servlet.context-path=/ums
 
 
