Add Employee entity

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,9 +18,9 @@ server.servlet.context-path=/ums
 
 
 # ======REDIS==============
-redis.host=sastech-redis-0001-001.sastech-redis.clieyv.aps1.cache.amazonaws.com
+redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
 redis.port=6379
 redis.password=some
-redis.nodes=sastech-redis-0001-001.sastech-redis.clieyv.aps1.cache.amazonaws.com:6379
+redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
 
 
