--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -15,5 +15,5 @@ server.servlet.context-path=/ums
 # ======REDIS==============
 redis.host=localhost
 redis.port=6379
-redis.nodes=localhost:6379
+redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
 
