--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -8,12 +8,11 @@ spring.datasource.hikari.maxLifetime=1800000
 spring.datasource.testWhileIdle=true
 DB.Connection.pool.size.min=5
 DB.Connection.pool.size.max=10
-server.port= 8081
-
+server.port=8081
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 server.servlet.context-path=/ums
-
-
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # ======REDIS==============
 redis.host=localhost
