--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -15,7 +15,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # ======REDIS==============
-redis.host=localhost
+redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
 redis.port=6379
+redis.password=some
 redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
 
+old.password.count=5
