DB Password changed

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@//sastecdb.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/SASTECDB
 spring.datasource.username=SVCLMFIN
-spring.datasource.password=SVCLMFIN
+spring.datasource.password=35cErV4NcA
 spring.datasource.driver-class-name=oracle.jdbc.pool.OracleDataSource
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
