DB Password changed

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -15,9 +15,13 @@ logging.file.name=/home/sastechadmin/logs/ums/ums.log
 logging.level.com.sas.mutual.payment=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
-
 server.servlet.context-path=/ums
 
+# ===============================
+# JPA / HIBERNATE
+spring.jpa.show-sql=true
+org.hibernate.envers.audit_table_suffix=_AUD
+validateTokenUrl=https://auth.aiqahealth.com/accounts/api/user-details/
 
 
 # ======REDIS==============
