add prod database and redis details in prod properties file

--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@//sastecdb.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/SASTECDB
-spring.datasource.username=SVCLMFIN
-spring.datasource.password=SVCLMFIN
+spring.datasource.url=jdbc:oracle:thin:@//svcl-prod.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/svcl-prod
+spring.datasource.username=admin
+spring.datasource.password=Ilhhppz2uQIZ26RA2Dg2
 spring.datasource.driver-class-name=oracle.jdbc.pool.OracleDataSource
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
@@ -21,10 +21,9 @@ server.servlet.context-path=/ums
 
 
 # ======REDIS==============
-redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
+redis.host=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com
 redis.port=6379
 redis.password=some
-redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
+redis.nodes=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
 
 old.password.count=5
-
