application-prod.properties db url change

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -33,3 +33,4 @@ redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,s
 password.old.count=5
 password.failed.count=5
 
+old.password.count=5
