--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@//svcl-prod.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/svcl-prod
+spring.datasource.url=jdbc:oracle:thin:@//svcl-prod.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/ORCL
 spring.datasource.username=admin
 spring.datasource.password=Ilhhppz2uQIZ26RA2Dg2
 spring.datasource.driver-class-name=oracle.jdbc.pool.OracleDataSource
