--- a/user/src/main/resources/application-uat.properties
+++ b/user/src/main/resources/application-uat.properties
@@ -26,5 +26,8 @@ redis.port=6379
 redis.password=some
 redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
 
+password.old.count=5
+password.failed.count=5
+
 old.password.count=5
 
