--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -26,4 +26,7 @@ redis.port=6379
 redis.password=some
 redis.nodes=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
 
+password.old.count=5
+password.failed.count=5
+
 old.password.count=5
