--- a/user/pom.xml
+++ b/user/pom.xml
@@ -15,7 +15,6 @@
     <properties>
         <java.version>11</java.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.sts.finncub</groupId>
@@ -76,6 +75,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>3.0.4</version>
         </dependency>
     </dependencies>
     <build>
