--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@//svcl-prod.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/ORCL
-spring.datasource.username=admin
-spring.datasource.password=Ilhhppz2uQIZ26RA2Dg2
+spring.datasource.username=SVCLMFIN
+spring.datasource.password=x23MZeeDA5kGDkSYQ
 spring.datasource.driver-class-name=oracle.jdbc.pool.OracleDataSource
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
@@ -9,16 +9,17 @@ spring.datasource.testWhileIdle=true
 DB.Connection.pool.size.min=5
 DB.Connection.pool.size.max=10
 server.port= 8080
+server.servlet.context-path=/ums
 
 #========LOGGING=====================
 logging.file.name=/home/sastechadmin/logs/ums/ums.log
 logging.level.com.sas.mutual.payment=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
-
-server.servlet.context-path=/ums
-
-
+# ===============================
+# JPA / HIBERNATE
+spring.jpa.show-sql=true
+org.hibernate.envers.audit_table_suffix=_AUD
 
 # ======REDIS==============
 redis.host=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com
@@ -28,5 +29,4 @@ redis.nodes=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com:63
 
 password.old.count=5
 password.failed.count=5
-
 old.password.count=5
