--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core-commons"]
 	path = core-commons
-	url = git@bitbucket.org:finstudio/core-commons.git
+	url = https://vinodkr1@bitbucket.org/finstudio/core-commons.git
