--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core-commons"]
 	path = core-commons
-	url = https://git@bitbucket.org:finstudio/core-commons.git
+	url = git@bitbucket.org:finstudio/core-commons.git
