Added Audit related changes

--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -9,10 +9,17 @@ spring.datasource.testWhileIdle=true
 DB.Connection.pool.size.min=5
 DB.Connection.pool.size.max=10
 server.port=8081
-logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 server.servlet.context-path=/ums
+
+#========LOGGING=====================
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===============================
+# JPA / HIBERNATE
+spring.jpa.show-sql=true
+org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
 redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
@@ -22,5 +29,4 @@ redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,s
 
 password.old.count=5
 password.failed.count=5
-
 old.password.count=5
