--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -19,7 +19,7 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 # ===============================
 # JPA / HIBERNATE
 spring.jpa.show-sql=true
-org.hibernate.envers.audit_table_suffix=_AUD
+org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
 redis.host=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com
