--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -13,13 +13,13 @@ server.servlet.context-path=/ums
 
 #========LOGGING=====================
 logging.file.name=/home/sastechadmin/logs/ums/ums.log
-logging.level.com.sas.mutual.payment=DEBUG
+logging.level.com.sts.finncub.usermanagement=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ===============================
 # JPA / HIBERNATE
 spring.jpa.show-sql=true
-org.hibernate.envers.audit_table_suffix=_AUD
+org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
 redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
