--- a/user/pom.xml
+++ b/user/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
             <version>3.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.19.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
