--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -22,7 +22,7 @@ spring.jpa.show-sql=true
 org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
-redis.host=localhost
+redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
 redis.port=6379
 redis.password=some
 redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
