mark token log out time in db for token after logout and core common update also show_sql_query to false in all properties files

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ===============================
 # JPA / HIBERNATE
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
