--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -18,11 +18,11 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # ===============================
 # JPA / HIBERNATE
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
-redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
+redis.host=localhost
 redis.port=6379
 redis.password=some
 redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
