--- a/user/src/main/resources/application-uat.properties
+++ b/user/src/main/resources/application-uat.properties
@@ -18,7 +18,7 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ===============================
 # JPA / HIBERNATE
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
