--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -13,13 +13,13 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.proc.param_null_passing=true
-server.port=8080
+server.port=8081
 server.servlet.context-path=/ums
 
 #========LOGGING=====================
-logging.file.name=/home/sastechadmin/logs/ums/ums.log
 logging.level.com.sts.finncub.usermanagement=INFO
-logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+logging.file.name=/home/sastechadmin/logs/ums/ums.log
+#logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
 redis.host=localhost
