Changes in properties files

--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -1,25 +1,26 @@
 spring.datasource.url=jdbc:oracle:thin:@//svcl-prod.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/ORCL
 spring.datasource.username=SVCLMFIN
 spring.datasource.password=x23MZeeDA5kGDkSYQ
-spring.datasource.driver-class-name=oracle.jdbc.pool.OracleDataSource
-spring.datasource.hikari.connectionTimeout=30000
-spring.datasource.hikari.idleTimeout=600000
-spring.datasource.hikari.maxLifetime=1800000
-spring.datasource.testWhileIdle=true
-DB.Connection.pool.size.min=10
-DB.Connection.pool.size.max=50
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.hikari.minimum-idle= 10
+spring.datasource.hikari.maximum-pool-size= 10
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime= 1800000
+spring.datasource.hikari.connection-timeout = 30000
+spring.datasource.hikari.auto-commit=true
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.proc.param_null_passing=true
 server.port= 8080
+spring.config.activate.on-profile=prod
 server.servlet.context-path=/ums
 
 #========LOGGING=====================
 logging.file.name=/home/sastechadmin/logs/ums/ums.log
 logging.level.com.sas.mutual.payment=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
-
-# ===============================
-# JPA / HIBERNATE
-spring.jpa.show-sql=false
-org.hibernate.envers.audit_table_suffix=_H
 
 # ======REDIS==============
 redis.host=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com
