--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.proc.param_null_passing=true
 server.port=8081
+spring.config.activate.on-profile=local
 server.servlet.context-path=/ums
 
 #========LOGGING=====================
