DispatcherServlet log enable from properties file

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -20,7 +20,7 @@ server.servlet.context-path=/ums
 #========LOGGING=====================
 logging.level.com.sts.finncub.usermanagement=DEBUG
 logging.file.name=/home/sastechadmin/logs/ums/ums.log
-#logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
 redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
