--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -20,7 +20,7 @@ server.servlet.context-path=/ums
 #========LOGGING=====================
 logging.level.com.sts.finncub.usermanagement=INFO
 logging.file.name=/home/sastechadmin/logs/ums/ums.log
-#logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
 redis.host=localhost
