--- a/user/src/main/resources/application-uat.properties
+++ b/user/src/main/resources/application-uat.properties
@@ -19,7 +19,7 @@ server.servlet.context-path=/ums
 
 #========LOGGING=====================
 logging.file.name=/home/sastechadmin/logs/ums/ums.log
-logging.level.com.sas.mutual.payment=DEBUG
+logging.level.com.sts.finncub.usermanagement=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
