--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -31,3 +31,12 @@ redis.nodes=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com:63
 password.old.count=5
 password.failed.count=100
 old.password.count=5
+
+#MAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=info@sastechstudio.com
+spring.mail.password=vpbdlfynydkxixxh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
