--- a/user/src/main/resources/application-uat.properties
+++ b/user/src/main/resources/application-uat.properties
@@ -31,3 +31,12 @@ redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,s
 password.old.count=5
 password.failed.count=5
 old.password.count=5
+
+#MAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=info@sastechstudio.com
+spring.mail.password=vpbdlfynydkxixxh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
