--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -40,5 +40,5 @@ password.old.count=5
 password.failed.count=5
 old.password.count=5
 
-ramson.accessKey=accessKey
-ramson.secretKey=secretKey
+ramson.accessKey=#eC#$@S
+ramson.secretKey=#$@S$tU#eCd!o
