RAMSON-FO-MIGRATION

--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -39,3 +39,6 @@ spring.mail.password=vpbdlfynydkxixxh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
+
+ramson.accessKey=#eC#$@S
+ramson.secretKey=#$@S$tU#eCd!o
