RAMSON-FO-MIGRATION

--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -41,5 +41,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 
-ramson.accessKey=#eC#$@S
-ramson.secretKey=#$@S$tU#eCd!o
+ramson.accessKey=AwxI6A2rgadnqKsYED0r
+ramson.secretKey=OI55swRUfpDpvOFuIT38
