--- a/user/src/main/resources/application-uat.properties
+++ b/user/src/main/resources/application-uat.properties
@@ -23,10 +23,10 @@ logging.level.com.sts.finncub.usermanagement=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
-redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
+redis.host=master.non-prod-svcl-redis-finncub.es1z2u.aps1.cache.amazonaws.com
 redis.port=6379
 redis.password=some
-redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
+redis.nodes=non-prod-svcl-redis-finncub-001.non-prod-svcl-redis-finncub.es1z2u.aps1.cache.amazonaws.com:6379
 
 password.old.count=5
 password.failed.count=5
