application-dev.properties edited online with Bitbucket

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ spring.datasource.username=SVCLMFIN
 spring.datasource.password=35cErV4NcA
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.hikari.minimum-idle= 2
-spring.datasource.hikari.maximum-pool-size= 10
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime= 1800000
+spring.datasource.hikari.maximum-pool-size= 5
+spring.datasource.hikari.idle-timeout=90000
+spring.datasource.hikari.max-lifetime= 180000
 spring.datasource.hikari.connection-timeout = 30000
 spring.datasource.hikari.auto-commit=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
