application-uat.properties edited online with Bitbucket

--- a/user/src/main/resources/application-uat.properties
+++ b/user/src/main/resources/application-uat.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@//sastecdb.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/SASTECDB
+spring.datasource.url=jdbc:oracle:thin:@//non-prod-svcl-rds-finncub.cny3oypusvkn.ap-south-1.rds.amazonaws.com:1521/SASTECDB
 spring.datasource.username=SVCLMFIN
 spring.datasource.password=35cErV4NcA
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
