--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@//svcl-prod.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/ORCL
+spring.datasource.url=jdbc:oracle:thin:@//prod-svcl-rds-finncub.cny3oypusvkn.ap-south-1.rds.amazonaws.com:1521/ORCL
 spring.datasource.username=SVCLMFIN
 spring.datasource.password=x23MZeeDA5kGDkSYQ
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -23,10 +23,10 @@ logging.level.com.sts.finncub.usermanagement=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
-redis.host=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com
+redis.host=prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com
 redis.port=6379
 redis.password=some
-redis.nodes=sastech-svcl-prod-cluster.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
+redis.nodes=prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com:6379
 
 password.old.count=5
 password.failed.count=100
