--- a/user/src/main/resources/application-uat.properties
+++ b/user/src/main/resources/application-uat.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:oracle:thin:@//sastecdb.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/SASTECDB
+spring.datasource.url=jdbc:oracle:thin:@//non-prod-svcl-rds-finncub.cny3oypusvkn.ap-south-1.rds.amazonaws.com:1521/SASTECDB
 spring.datasource.username=SVCLMFIN
 spring.datasource.password=35cErV4NcA
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.hikari.minimum-idle= 2
-spring.datasource.hikari.maximum-pool-size= 10
+spring.datasource.hikari.maximum-pool-size= 5
 spring.datasource.hikari.idle-timeout=90000
 spring.datasource.hikari.max-lifetime= 180000
 spring.datasource.hikari.connection-timeout = 30000
@@ -23,10 +23,10 @@ logging.level.com.sts.finncub.usermanagement=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
-redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
+redis.host=non-prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com
 redis.port=6379
 redis.password=some
-redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
+redis.nodes=non-prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com:6379
 
 password.old.count=5
 password.failed.count=5
