FLM-2133 Add and update employee query changes (UMS)

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@//sastecdb.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/SASTECDB?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:oracle:thin:@//non-prod-svcl-rds-finncub.cny3oypusvkn.ap-south-1.rds.amazonaws.com:1521/SASTECDB
 spring.datasource.username=SVCLMFIN
 spring.datasource.password=35cErV4NcA
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -32,9 +32,10 @@ logging.file.name=/home/sastechadmin/logs/ums/ums.log
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
-redis.host=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com
+redis.host=non-prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com
 redis.port=6379
-redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
+redis.password=some
+redis.nodes=non-prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com:6379
 
 password.old.count=5
 password.failed.count=5
