FLM-2300-secret-manager-change

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@//non-prod-svcl-rds-finncub.cny3oypusvkn.ap-south-1.rds.amazonaws.com:1521/SASTECDB
-spring.datasource.username=SVCLMFIN
-spring.datasource.password=35cErV4NcA
+spring.datasource.url=${oracle_url}
+spring.datasource.username=${oracle_username}
+spring.datasource.password=${oracle_password}
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.hikari.minimum-idle= 2
 spring.datasource.hikari.maximum-pool-size= 5
@@ -43,3 +43,7 @@ old.password.count=5
 
 ramson.accessKey=#eC#$@S
 ramson.secretKey=#$@S$tU#eCd!o
+
+#AWS
+spring.config.import=aws-secretsmanager:non-prod/oracle
+aws.secretsmanager.region=ap-south-1
