--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -20,8 +20,8 @@ server.servlet.context-path=/ums
 #MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=info@sastechstudio.com
-spring.mail.password=vpbdlfynydkxixxh
+spring.mail.username=${mail_username}
+spring.mail.password=${mail_password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
@@ -32,18 +32,18 @@ logging.file.name=/home/ubuntu/logs/ums/ums.log
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
-redis.host=non-prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com
+redis.host=${redis_host}
 redis.port=6379
-redis.password=some
-redis.nodes=non-prod-svcl-redis-finncub-001.es1z2u.0001.aps1.cache.amazonaws.com:6379
+redis.password=${redis_password}
+redis.nodes=${redis_host}:6379
 
 password.old.count=5
 password.failed.count=5
 old.password.count=5
 
-ramson.accessKey=#eC#$@S
-ramson.secretKey=#$@S$tU#eCd!o
+ramson.accessKey=${ramson_accessKey}
+ramson.secretKey=${ramson_secretKey}
 
 #AWS
-spring.config.import=aws-secretsmanager:non-prod/oracle
+spring.config.import=aws-secretsmanager:NON-PROD/SVCL/finncub/rds
 aws.secretsmanager.region=ap-south-1
