core common update and added optional param in properties file for secret manager

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -44,5 +44,5 @@ ramson.accessKey=${ramson_accessKey}
 ramson.secretKey=${ramson_secretKey}
 
 #AWS
-spring.config.import=aws-secretsmanager:NON-PROD/SVCL/finncub/rds
+spring.config.import=optional:aws-secretsmanager:NON-PROD/SVCL/finncub/rds
 aws.secretsmanager.region=ap-south-1
