--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -42,3 +42,11 @@ spring.mail.properties.mail.transport.protocol=smtp
 
 ramson.accessKey=#eC#$@S
 ramson.secretKey=#$@S$tU#eCd!o
+
+# ========AWS Credentials==========
+cloud.aws.credentials.access-key=AKIA6FFDGOQ5I7IGCG3L
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=ap-south-1
+cloud.aws.region.stack.auto=false
+aws.bucketName=finncub-uat
+cloud.aws.end-point.uri=https://sqs.ap-south-1.amazonaws.com/973152351290/finncub-sms-queue
