--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@//sastecdb.ccmgpjkf9irf.ap-south-1.rds.amazonaws.com:1521/SASTECDB?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=SVCLMFIN
-spring.datasource.password=35cErV4NcA
+spring.datasource.url=${oracle_url}
+spring.datasource.username=${oracle_username}
+spring.datasource.password=${oracle_password}
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.hikari.minimum-idle= 2
 spring.datasource.hikari.maximum-pool-size= 10
@@ -19,13 +19,13 @@ server.servlet.context-path=/ums
 
 #========LOGGING=====================
 logging.level.com.sts.finncub.usermanagement=INFO
-logging.file.name=/home/sastechadmin/logs/ums/ums.log
+logging.file.name=/home/ubuntu/logs/ums/ums.log
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
-redis.host=localhost
+redis.host=${redis_host}
 redis.port=6379
-redis.nodes=sastech-redis-fintech.clieyv.ng.0001.aps1.cache.amazonaws.com:6379,sastech-redis-fintech-ro.clieyv.ng.0001.aps1.cache.amazonaws.com:6379
+redis.nodes=${redis_host}:6379
 
 password.old.count=5
 password.failed.count=5
@@ -34,11 +34,15 @@ old.password.count=5
 #MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=info@sastechstudio.com
-spring.mail.password=vpbdlfynydkxixxh
+spring.mail.username=${mail_username}
+spring.mail.password=${mail_password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 
-ramson.accessKey=#eC#$@S
-ramson.secretKey=#$@S$tU#eCd!o
+ramson.accessKey=${ramson_accessKey}
+ramson.secretKey=${ramson_secretKey}
+
+#AWS
+spring.config.import=optional:aws-secretsmanager:NON-PROD/SVCL/finncub/rds
+aws.secretsmanager.region=ap-south-1
