changes in profile for secret properties

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -46,9 +46,9 @@ ramson.secretKey=${ramson_secretKey}
 # ========AWS Credentials==========
 spring.config.import=optional:aws-secretsmanager:NON-PROD/SVCL/finncub/rds
 aws.secretsmanager.region=ap-south-1
-cloud.aws.credentials.access-key=AKIA6FFDGOQ5I7IGCG3L
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.region.static=ap-south-1
 cloud.aws.region.stack.auto=false
 aws.bucketName=finncub-uat
-cloud.aws.end-point.uri=https://sqs.ap-south-1.amazonaws.com/973152351290/finncub-sms-queue
+cloud.aws.end-point.uri=${COLLECTION_SMS_QUEUE}
