FLM-2300-secret-manager

--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -44,8 +44,10 @@ ramson.accessKey=${RAMSON_ACCESS_KEY}
 ramson.secretKey=${RAMSON_SECRET_KEY}
 
 # ========AWS Credentials==========
-cloud.aws.credentials.access-key=${AWS_ACCESS_KEY1}
-cloud.aws.credentials.secret-key=${AWS_SECRET_KEY1}
+#cloud.aws.credentials.access-key=AKIA6FFDGOQ5I7IGCG3L
+#cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.region.static=ap-south-1
 cloud.aws.region.stack.auto=false
 aws.bucketName=finncub-uat
