--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -33,8 +33,8 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
 redis.host=${redis_host}
-redis.port=6379
-redis.nodes=${redis_host}:6379
+redis.port=${redis_port}
+redis.nodes=${redis_host}:${redis_port}
 
 password.old.count=5
 password.failed.count=5
