FLM-2346 - created new queue for uat.

--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -52,3 +52,4 @@ cloud.aws.region.static=ap-south-1
 cloud.aws.region.stack.auto=false
 aws.bucketName=finncub-uat
 cloud.aws.end-point.uri=${COLLECTION_SMS_QUEUE}
+queue.name=finncub-sms-queue-uat
