--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -54,3 +54,4 @@ cloud.aws.end-point.uri=${COLLECTION_SMS_QUEUE}
 #AWS
 spring.config.import=optional:aws-secretsmanager:PROD/SVCL/finncub/rds
 aws.secretsmanager.region=ap-south-1
+queue.name=finncub-sms-queue
