core common update changes fieldName for redis and db in secret manager

--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${ORACLE_URL}
-spring.datasource.username=${ORACLE_USERNAME}
-spring.datasource.password=${ORACLE_PASSWORD}
+spring.datasource.url=jdbc:oracle:thin:@//${DB_HOST_NAME}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.hikari.minimum-idle= 10
 spring.datasource.hikari.maximum-pool-size= 20
@@ -24,8 +24,8 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
 redis.host=${REDIS_HOST}
-redis.port=6379
-redis.nodes=${REDIS_HOST}:6379
+redis.port=${REDIS_PORT}
+redis.nodes=${REDIS_HOST}:${REDIS_PORT}
 
 password.old.count=5
 password.failed.count=100
