--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${oracle_url}
-spring.datasource.username=${oracle_username}
-spring.datasource.password=${oracle_password}
+spring.datasource.url=jdbc:oracle:thin:@//${DB_HOST_NAME}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.hikari.minimum-idle= 2
 spring.datasource.hikari.maximum-pool-size= 5
@@ -32,9 +32,9 @@ logging.file.name=/home/ubuntu/logs/ums/ums.log
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ======REDIS==============
-redis.host=${redis_host}
-redis.port=${redis_port}
-redis.nodes=${redis_host}:${redis_port}
+redis.host=${REDIS_HOST}
+redis.port=${REDIS_PORT}
+redis.nodes=${REDIS_HOST}:${REDIS_PORT}
 
 password.old.count=5
 password.failed.count=5
