--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -1,3 +1,4 @@
+# ====================          DATABASE DETAILS        =======================
 spring.datasource.url=jdbc:oracle:thin:@//${DB_HOST_NAME}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -17,39 +18,44 @@ server.port=8081
 spring.config.activate.on-profile=local
 server.servlet.context-path=/ums
 
-#MAIL
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${mail_username}
-spring.mail.password=${mail_password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.transport.protocol=smtp
-
-#========LOGGING=====================
-logging.level.com.sts.finncub.usermanagement=INFO
+# ====================          LOGGING DETAILS         =======================
+logging.level.com.sts.finncub.usermanagement=DEBUG
 logging.file.name=/home/ubuntu/logs/ums/ums.log
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
-# ======REDIS==============
+# ====================          REDIS DETAILS           =======================
 redis.host=${REDIS_HOST}
 redis.port=${REDIS_PORT}
 redis.nodes=${REDIS_HOST}:${REDIS_PORT}
+
+# ====================          MAIL DETAILS           =======================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
 
 password.old.count=5
 password.failed.count=5
 old.password.count=5
 
-ramson.accessKey=${ramson_accessKey}
-ramson.secretKey=${ramson_secretKey}
+ramson.accessKey=${RAMSON_ACCESS_KEY}
+ramson.secretKey=${RAMSON_SECRET_KEY}
 
-# ========AWS Credentials==========
-spring.config.import=optional:aws-secretsmanager:NON-PROD/SVCL/finncub/rds
-aws.secretsmanager.region=ap-south-1
+# ====================      AWS CREDENTIALS             =======================
 cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
 cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.region.static=ap-south-1
 cloud.aws.region.stack.auto=false
-aws.bucketName=finncub-uat
 cloud.aws.end-point.uri=${COLLECTION_SMS_QUEUE}
-queue.name=finncub-sms-queue-uat
+queue.name=${SMS_QUEUE_NAME}
+aws.bucketName=${S3_BUCKET_NAME}
+aws.notificationPath=SVCL/Notification/
+#SIGNED URL EXPIRY TIME IN MINUTES
+aws.signedUrlExpiryTime=5
+
+# ====================      SECRET MANAGER DETAILS      =======================
+spring.config.import=optional:aws-secretsmanager:NON-PROD/SVCL/finncub/rds
+aws.secretsmanager.region=ap-south-1
