--- a/user/src/main/resources/application-prod.properties
+++ b/user/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
+# ====================          DATABASE DETAILS        =======================
 spring.datasource.url=jdbc:oracle:thin:@//${DB_HOST_NAME}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -17,21 +18,17 @@ server.port= 8080
 spring.config.activate.on-profile=prod
 server.servlet.context-path=/ums
 
-#========LOGGING=====================
-logging.file.name=/home/sastechadmin/logs/ums/ums.log
+# ====================          LOGGING DETAILS         =======================
 logging.level.com.sts.finncub.usermanagement=DEBUG
+logging.file.name=/home/ubuntu/logs/ums/ums.log
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
-# ======REDIS==============
+# ====================          REDIS DETAILS           =======================
 redis.host=${REDIS_HOST}
 redis.port=${REDIS_PORT}
 redis.nodes=${REDIS_HOST}:${REDIS_PORT}
 
-password.old.count=5
-password.failed.count=100
-old.password.count=5
-
-#MAIL
+# ====================          MAIL DETAILS           =======================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -40,18 +37,25 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 
+password.old.count=5
+password.failed.count=5
+old.password.count=5
+
 ramson.accessKey=${RAMSON_ACCESS_KEY}
 ramson.secretKey=${RAMSON_SECRET_KEY}
 
-# ========AWS Credentials==========
+# ====================      AWS CREDENTIALS             =======================
 cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
 cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.region.static=ap-south-1
 cloud.aws.region.stack.auto=false
-aws.bucketName=finncub-uat
 cloud.aws.end-point.uri=${COLLECTION_SMS_QUEUE}
+queue.name=${SMS_QUEUE_NAME}
+aws.bucketName=${S3_BUCKET_NAME}
+aws.notificationPath=SVCL/Notification/
+#SIGNED URL EXPIRY TIME IN MINUTES
+aws.signedUrlExpiryTime=5
 
-#AWS
+# ====================      SECRET MANAGER DETAILS      =======================
 spring.config.import=optional:aws-secretsmanager:PROD/SVCL/finncub/rds
 aws.secretsmanager.region=ap-south-1
-queue.name=finncub-sms-queue
