On password change/reset all active session of that user should be logged out

--- a/user/src/main/resources/application-local.properties
+++ b/user/src/main/resources/application-local.properties
@@ -24,9 +24,9 @@ logging.file.name=/home/ubuntu/logs/ums/ums.log
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # ====================          REDIS DETAILS           =======================
-redis.host=${REDIS_HOST}
-redis.port=${REDIS_PORT}
-redis.nodes=${REDIS_HOST}:${REDIS_PORT}
+redis.host=localhost
+redis.port=6379
+redis.nodes=localhost:6379
 
 # ====================          MAIL DETAILS           =======================
 spring.mail.host=smtp.gmail.com
