--- a/user/pom.xml
+++ b/user/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>spring-cloud-aws-messaging</artifactId>
             <version>2.2.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.passay</groupId>
+            <artifactId>passay</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
